Product:AppWidget example ok BugID:N Description: just sample Unit Test:N
Module:

Product:

BugID:

Description:

Unit Test:

Change-Id: Ibbdbf4f2274de555bb1d332a85b398f4ca5c1880
Signed-off-by: rongtian

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="width">画笔宽度</string>
     <string name="blur">模糊效果</string>
     <string name="emboss">浮雕效果</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="configure">Configure</string>
+    <string name="add_widget">Add widget</string>
 </resources>
