--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="title_activity_main2">Main2Activity</string>
     <string name="hello">Hello World, HandDraw!</string>
-    <string name="app_name">手绘</string>
+    <string name="app_name">nfcTest</string>
     <string name="width_1">1像素</string>
     <string name="width_3">3像素</string>
     <string name="width_5">5像素</string>
