### 1 深入理解view 来自郭霖， somke test ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Camera2</string>
+    <string name="app_name">ViewDeeper</string>
     <string name="picture">Picture</string>
     <string name="description_info">Camera2 API example app</string>
     <string name="request_permission">This sample needs camera permission.</string>
